--- a/src/app/components/listcustomer/listcustomer.component.html
+++ b/src/app/components/listcustomer/listcustomer.component.html
@@ -37,7 +37,16 @@
     <!-- ACTIVE_CODE Column -->
     <ng-container matColumnDef="ACTIVE_CODE">
       <th mat-header-cell *matHeaderCellDef>ACTIVE CODE</th>
-      <td mat-cell *matCellDef="let user">{{ user.ACTIVE_CODE }}</td>
+      <td mat-cell *matCellDef="let user">
+        <button
+          class="w-[90px] p-2 rounded cursor-pointer"
+          [ngClass]="
+            user.ACTIVE_CODE === 'IN_ACTIVE' ? 'bg-red-500' : 'bg-green-500'
+          "
+        >
+          {{ user.ACTIVE_CODE }}
+        </button>
+      </td>
     </ng-container>
 
     <!-- actions Column -->
