--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen">
-  <table mat-table [dataSource]="customers" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!-- PARTY_NAME Column -->
     <ng-container matColumnDef="PARTY_NAME">
       <th mat-header-cell *matHeaderCellDef>PARTY NAME</th>
@@ -28,8 +28,17 @@
 
     <!-- STATUS_CODE Column -->
     <ng-container matColumnDef="STATUS_CODE">
-      <th mat-header-cell *matHeaderCellDef>STATUS CODE</th>
-      <td mat-cell *matCellDef="let customer">{{ customer.STATUS_CODE }}</td>
+      <th mat-header-cell *matHeaderCellDef>ACTIVE CODE</th>
+      <td mat-cell *matCellDef="let customer">
+        <button
+          class="w-[90px] p-2 rounded cursor-pointer"
+          [ngClass]="
+            customer.ACTIVE_CODE === 'IN_ACTIVE' ? 'bg-red-500' : 'bg-green-500'
+          "
+        >
+          {{ customer.ACTIVE_CODE }}
+        </button>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
@@ -69,11 +78,8 @@
   </table>
   <mat-paginator
     [length]="totalCount"
-    [pageSize]="pageSize"
-    [pageIndex]="pageIndex"
-    [pageSizeOptions]="[5, 10, 25, 100, totalCount]"
+    [pageSizeOptions]="[10, 5, 25, 100, totalCount]"
     aria-label="Select page"
-    (page)="onPageChange($event)"
   >
   </mat-paginator>
 </div>
