--- a/src/app/components/listcustomer/listcustomer.component.html
+++ b/src/app/components/listcustomer/listcustomer.component.html
@@ -74,7 +74,7 @@
             <mat-icon>edit</mat-icon>
             <span>Edit</span>
           </button>
-          <button mat-menu-item (click)="remove(user)">
+          <button mat-menu-item (click)="openDialog(user)">
             <mat-icon>delete</mat-icon>
             <span>Delete</span>
           </button>
