--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -31,12 +31,15 @@
       <th mat-header-cell *matHeaderCellDef>ACTIVE CODE</th>
       <td mat-cell *matCellDef="let customer">
         <button
+          (click)="inActiveDialog(customer)"
           class="w-[90px] p-2 rounded cursor-pointer"
           [ngClass]="
-            customer.ACTIVE_CODE === 'IN_ACTIVE' ? 'bg-red-500' : 'bg-green-500'
+            customer.ACTIVE_CODE === 'IN_ACTIVE'
+              ? 'bg-red-500 hover:bg-red-900'
+              : 'bg-green-500 hover:bg-green-900'
           "
         >
-          {{ customer.ACTIVE_CODE }}
+          <span class="text-white">{{ customer.ACTIVE_CODE }}</span>
         </button>
       </td>
     </ng-container>
@@ -65,7 +68,7 @@
             <mat-icon>edit</mat-icon>
             <span>Edit</span>
           </button>
-          <button mat-menu-item (click)="remove(customer)">
+          <button mat-menu-item (click)="openDialog(customer)">
             <mat-icon>delete</mat-icon>
             <span>Delete</span>
           </button>
@@ -77,7 +80,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
   <mat-paginator
-    [length]="totalCount"
     [pageSizeOptions]="[10, 5, 25, 100, totalCount]"
     aria-label="Select page"
   >
