--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,9 @@
-<div class="max-w-full">
-  <app-navbar></app-navbar>
-  <mat-drawer-container class="container">
-    <mat-drawer mode="side" [opened]="isOpened">
-      <app-sidenav></app-sidenav>
-    </mat-drawer>
-    <mat-drawer-content>
-      <router-outlet></router-outlet>
-    </mat-drawer-content>
-  </mat-drawer-container>
-</div>
+<app-navbar></app-navbar>
+<mat-drawer-container>
+  <mat-drawer mode="side" [opened]="isOpened">
+    <app-sidenav></app-sidenav>
+  </mat-drawer>
+  <mat-drawer-content>
+    <router-outlet></router-outlet>
+  </mat-drawer-content>
+</mat-drawer-container>
