--- a/src/app/components/sidenav/sidenav.component.css
+++ b/src/app/components/sidenav/sidenav.component.css
@@ -7,15 +7,14 @@ ul {
 }
 
 li {
-  text-align: left;
+  text-align: right;
   padding: 10px;
   cursor: pointer;
   position: relative;
   display: flex;
-  justify-content: right;
-  padding-top: 10px;
-  padding-right: 10px;
-  gap: 100px;
+  justify-content: space-between;
+  right: -72px;
+  padding-right: 103px;
 }
 
 li a {
@@ -28,23 +27,3 @@ li:hover {
   background-color: #f0f0f0;
   color: #000;
 }
-
-/* ertyuiop */
-/* 
-.example-container {
-  width: 500px;
-  height: 300px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.example-sidenav-content {
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-
-.example-sidenav {
-  padding: 20px;
-}
- */
